--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,6 +1,9 @@
 {
+  "continue_button": "Продолжить",
   "language_name": "Русский",
+  "login": "Войти",
+  "login_button": "Вход",
+  "register": "Зарегистрироваться",
   "menu_button_send": "Хочу отправить",
-  "menu_button_take": "Могу захватить",
-  "login_button": "Вход"
+  "menu_button_take": "Могу захватить"
 }
