--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,6 +1,9 @@
 {
+  "continue_button": "Continue",
   "language_name": "English",
+  "login": "Login",
+  "login_button": "Login",
+  "register": "Register",
   "menu_button_send": "Want to send",
-  "menu_button_take": "Can take",
-  "login_button": "Login"
+  "menu_button_take": "Can take"
 }
