8 10 | parcelTake rework,+ parcelOverview page

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,6 +1,8 @@
 {
   "add_application": "Add application",
 
+  "back_to_search_results": "Back to search results",
+
   "breadcrumbs.home": "Home",
   "breadcrumbs.search_parcel": "Parcel search",
 
