--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,6 +1,8 @@
 {
   "add_application": "Добавить заявку",
 
+  "back_to_search_results": "Назад к результатам поиска",
+
   "breadcrumbs.home": "Главная",
   "breadcrumbs.search_parcel": "Поиск посылки",
 
