--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,11 +6,11 @@
   "breadcrumbs.home": "Home",
   "breadcrumbs.search_parcel": "Parcel search",
 
-  "continue_button": "Continue",
-  "create_new_request": "Create request",
-
   "confirmation": "Conformation",
   "confirmation_text": "Please enter the code received on the number +7 905 677 34 54",
+  "connect": "Connect",
+  "continue_button": "Continue",
+  "create_new_request": "Create request",
 
   "footer.contacts": "Contacts",
   "footer.copy": "Copyright",
