--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -5,6 +5,7 @@
 
   "breadcrumbs.home": "Home",
   "breadcrumbs.search_parcel": "Parcel search",
+  "breadcrumbs.search_suitcase": "Suitcase search",
 
   "confirmation": "Conformation",
   "confirmation_text": "Please enter the code received on the number +7 905 677 34 54",
@@ -33,6 +34,7 @@
 
   "menu_button_send": "Want to send",
   "menu_button_take": "Can take",
+  "more_filters": "More filters",
 
   "our_advantages": "Our advantages",
 
@@ -51,6 +53,8 @@
   "search.title": "Search for a parcel",
   "search.to": "To",
   "search.weight": "kg",
+
+  "suitcase.search": "Suitcase search",
 
   "take.add_new_order": "+ Add order",
   "take.additional_search": "Additional search",
