--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -4,7 +4,9 @@
 
   "back_to_search_results": "Назад к результатам поиска",
 
+  "breadcrumbs.completed": "Завершённые",
   "breadcrumbs.home": "Главная",
+  "breadcrumbs.my_parcels": "Мои посылки",
   "breadcrumbs.search_parcel": "Поиск посылки",
   "breadcrumbs.search_suitcase": "Поиск чемодана",
 
@@ -55,6 +57,8 @@
   "search.to": "Куда",
   "search.weight": "кг",
 
+  "send_before": "Отправить до",
+
   "suitcase.search": "Поиск чемодана",
   "suitcase.free_space": "свободных мест в чемодане",
 
@@ -66,6 +70,13 @@
   "take.search": "Искать",
   "take.to": "Куда",
 
+  "tasks.active": "Активные",
+  "tasks.completed": "Завершённые",
+
+  "status.delivered": "Доставлено",
+  "status.sent": "Отправлено",
+
   "we_have_mobile_app": "У нас есть мобильное приложение!",
+  "weight": "Вес",
   "what_do_you_need": "Что Вам необходимо?"
 }
