Написал функционал окна смены языка и валюты. Написал функционал сохраниния всех этих данных в LocalStorage и поднятия их при Ctrl+F5
Ден, внимание писал прям в FOX обязательно прими изменения!

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -27,7 +27,7 @@
   "home.how_it_works": "Как это работает?",
   "home.title": "Заголовок о сервисе в две строки",
 
-  "language_name": "Русский, ₽",
+  "language_name": "Русский",
 
   "login": "Войти",
   "login.button": "Вход",
