--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -26,7 +26,7 @@
   "home.how_it_works": "How it works?",
   "home.title": "Title about service at several lines",
 
-  "language_name": "English, $",
+  "language_name": "English",
 
   "login": "Login",
   "login.button": "Login",
