--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -34,6 +34,11 @@
 
   "menu_button_send": "Want to send",
   "menu_button_take": "Can take",
+
+  "messages": "Messages",
+  "messages.from": "From: ",
+  "messages.to": "To: ",
+
   "more_filters": "More filters",
 
   "our_advantages": "Our advantages",
@@ -53,6 +58,10 @@
   "search.title": "Search for a parcel",
   "search.to": "To",
   "search.weight": "kg",
+
+  "steps.1_of_3": "Шаг 1 / 3",
+  "steps.2_of_3": "Шаг 2 / 3",
+  "steps.3_of_3": "Шаг 3 / 3",
 
   "suitcase.search": "Suitcase search",
 
