H1 styles - same for all pages.

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,6 +1,7 @@
 {
   "add_application": "Добавить заявку",
   "add_new_order": "+ Добавить заявку",
+  "auto_search": "Автопоиск",
 
   "back_to_search_results": "Назад к результатам поиска",
 
