--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,5 +1,7 @@
 {
   "add_application": "Add application",
+  "add_new_order": "+ Add application",
+  "auto_search": "Autosearch",
 
   "back_to_search_results": "Back to search results",
 
@@ -76,5 +78,6 @@
   "status.sent": "Отправлено",
 
   "we_have_mobile_app": "We've got mobile app!",
+  "weight": "Weight",
   "what_do_you_need": "What do you need?"
 }
