--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -63,9 +63,9 @@
   "search.to": "To",
   "search.weight": "kg",
 
-  "steps.1_of_3": "Шаг 1 / 3",
-  "steps.2_of_3": "Шаг 2 / 3",
-  "steps.3_of_3": "Шаг 3 / 3",
+  "steps.1_of_3": "Step 1 / 3",
+  "steps.2_of_3": "Step 2 / 3",
+  "steps.3_of_3": "Step 3 / 3",
 
   "send_before": "Send before",
 
@@ -75,18 +75,22 @@
   "take.additional_search": "Additional search",
   "take.from": "From",
   "take.parcel_search": "Search parcel",
-  "take.results_title_1": "Найдено",
-  "take.results_title_2": "желающих отправить посылку",
+  "take.results_title_1": "Found",
+  "take.results_title_2": "who want to send a parcel",
   "take.search": "Search",
   "take.to": "To",
 
   "tasks.active": "Active",
   "tasks.completed": "Completed",
 
-  "status.delivered": "Доставлено",
-  "status.sent": "Отправлено",
+  "status.delivered": "Delivered",
+  "status.looking_parcel": "Looking for parcel",
+  "status.looking_suitcase": "Looking for a suitcase",
+  "status.sent": "Sent",
 
   "we_have_mobile_app": "We've got mobile app!",
   "weight": "Weight",
   "what_do_you_need": "What do you need?"
 }
+
+
