--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -3,19 +3,25 @@
   "add_new_order": "+ Добавить заявку",
   "auto_search": "Автопоиск",
 
+  "back": "Назад",
   "back_to_search_results": "Назад к результатам поиска",
 
+  "breadcrumbs.account": "Аккаунт",
   "breadcrumbs.completed": "Завершённые",
   "breadcrumbs.home": "Главная",
   "breadcrumbs.my_parcels": "Мои посылки",
+  "breadcrumbs.payments": "Платежи",
   "breadcrumbs.search_parcel": "Поиск посылки",
   "breadcrumbs.search_suitcase": "Поиск чемодана",
+  "breadcrumbs.personal_info": "Личная информация",
 
   "confirmation": "Подтверждение",
   "confirmation_text": "Пожалуйста, введите код, полученный на номер +7 905 677 34 54",
   "connect": "Связаться",
   "continue_button": "Продолжить",
   "create_new_request": "Создать заявку",
+
+  "edit": "Редактировать",
 
   "footer.contacts": "Контакты",
   "footer.copy": "Копирайт",
@@ -30,6 +36,7 @@
 
   "language_name": "Русский",
 
+  "load_document": "Загрузить документ",
   "login": "Войти",
   "login.button": "Вход",
   "login.dont_have_account": "Еще нет аккаунта?",
