--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -25,6 +25,8 @@
   "footer.support": "Поддержка",
   "footer.take": "Могу захватить",
 
+  "dimensions": "Габариты",
+
   "home.how_it_works": "Как это работает?",
   "home.title": "Заголовок о сервисе в две строки",
 
