--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -25,6 +25,8 @@
   "footer.support": "Support",
   "footer.take": "Can take",
 
+  "dimensions": "Dimensions",
+
   "home.how_it_works": "How it works?",
   "home.title": "Title about service at several lines",
 
@@ -66,6 +68,9 @@
   "steps.1_of_3": "Шаг 1 / 3",
   "steps.2_of_3": "Шаг 2 / 3",
   "steps.3_of_3": "Шаг 3 / 3",
+
+  "steps.1_of_2": "Шаг 1 / 2",
+  "steps.2_of_2": "Шаг 2 / 2",
 
   "send_before": "Send before",
 
