--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -18,6 +18,7 @@
   "confirmation": "Conformation",
   "confirmation_text": "Please enter the code received on the number +7 905 677 34 54",
   "connect": "Connect",
+  "connect_card": "Connect card",
   "continue_button": "Continue",
   "create_new_request": "Create request",
 
