--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -18,6 +18,7 @@
   "confirmation": "Подтверждение",
   "confirmation_text": "Пожалуйста, введите код, полученный на номер +7 905 677 34 54",
   "connect": "Связаться",
+  "connect_card": "Привязать карту",
   "continue_button": "Продолжить",
   "create_new_request": "Создать заявку",
 
