--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -2,6 +2,7 @@
   "add_application": "Добавить заявку",
   "add_new_order": "+ Добавить заявку",
   "auto_search": "Автопоиск",
+  "apartment": "Квартира",
 
   "back": "Назад",
   "back_to_search_results": "Назад к результатам поиска",
@@ -16,12 +17,26 @@
   "breadcrumbs.search_parcel": "Поиск посылки",
   "breadcrumbs.search_suitcase": "Поиск чемодана",
 
+  "building": "Корпус",
+
+  "check_and_edit_your_data": "Пожалуйста проверьте данные и отредактируйте при необходимости.",
+
+  "country_code": "Код государства",
+
   "confirmation": "Подтверждение",
   "confirmation_text": "Пожалуйста, введите код, полученный на номер +7 905 677 34 54",
   "connect": "Связаться",
   "connect_card": "Привязать карту",
   "continue_button": "Продолжить",
   "create_new_request": "Создать заявку",
+
+  "city": "Город",
+
+  "date_of_birth": "Дата рождения",
+  "date_of_issue": "Дата выдачи",
+  "date_of_expiration": "Дата окончания",
+
+  "dimensions": "Габариты",
 
   "edit": "Редактировать",
 
@@ -35,10 +50,14 @@
 
   "from": "Откуда",
 
-  "dimensions": "Габариты",
+  "gender": "Пол",
 
   "home.how_it_works": "Как это работает?",
   "home.title": "Заголовок о сервисе в две строки",
+
+  "house": "Дом",
+
+  "issuing_authority": "Орган выдавший документ",
 
   "language_name": "Русский",
 
@@ -58,9 +77,20 @@
 
   "more_filters": "Больше фильтров",
 
+  "name": "Имя",
+
+  "number": "Номер",
+
   "our_advantages": "Наши преимущества",
 
   "parcel_description": "Описание посылки",
+  "parcel_category": "Категория посылки",
+
+  "passport_upload_text": "Пожалуйста загрузите фотографию перевого разворота своего паспорта.",
+
+  "pay_a_deposit_for_safety" : "Могу внести залог за сохранность",
+
+  "place_of_birth": "Место рождения",
 
   "product_category": "Категория товара",
 
@@ -69,6 +99,8 @@
   "readmore": "Подробнее",
 
   "recipient_data": "Данные получателя",
+
+  "region": "Регион",
 
   "register": "Зарегистрироваться",
   "registration": "Регистрация",
@@ -84,14 +116,23 @@
   "search.to": "Куда",
   "search.weight": "кг",
 
+  "series": "Серия",
+
   "steps.1_of_3": "Шаг 1 / 3",
   "steps.2_of_3": "Шаг 2 / 3",
   "steps.3_of_3": "Шаг 3 / 3",
+
+  "steps.1_of_2": "Шаг 1 / 2",
+  "steps.2_of_2": "Шаг 2 / 2",
+
+  "street": "Улица",
 
   "send_before": "Отправить до",
 
   "suitcase.search": "Поиск чемодана",
   "suitcase.free_space": "свободных мест в чемодане",
+
+  "take_consolidated_cargo": "Могу взять сборный груз",
 
   "take.additional_search": "Расширенный поиск",
   "take.from": "Откуда",
@@ -104,12 +145,17 @@
   "tasks.active": "Активные",
   "tasks.completed": "Завершённые",
 
+  "transfer_method": "Способ передачи",
   "transfer_method_to_recipient": "Способ передачи получателю",
 
   "status.delivered": "Доставлено",
   "status.looking_parcel": "Ищу посылку",
   "status.looking_suitcase": "Ищу чемодан",
   "status.sent": "Отправлено",
+
+  "surname": "Фамилия",
+
+  "upload_photo": "Загрузить фото",
 
   "we_have_mobile_app": "У нас есть мобильное приложение!",
   "weight": "Вес",
