--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -21,6 +21,7 @@
 
   "check_and_edit_your_data": "Please check your data and edit if necessary.",
 
+  "country": "Country",
   "country_code": "Country code",
 
   "confirmation": "Conformation",
@@ -116,6 +117,8 @@
   "search.to": "To",
   "search.weight": "kg",
 
+  "send": "Send",
+
   "series": "Series",
 
   "steps.1_of_3": "Step 1 / 3",
@@ -160,7 +163,24 @@
   "we_have_mobile_app": "We've got mobile app!",
   "weight": "Weight",
   "where_to": "To",
-  "what_do_you_need": "What do you need?"
+  "what_do_you_need": "What do you need?",
+
+
+  "how": "How?",
+  "where": "Where?",
+  "phone_number": "Phone number",
+  "names": "Names",
+  "choose_category": "Choose category",
+  "calendar": "Calendar",
+  "height": "Height",
+  "depth": "Depth",
+  "width": "Width",
+  "sum": "Sum",
+  "change_search_request": "Change search request",
+
+  "or_decline": "or decline",
+  "reconcile_data": "Reconcile data",
+  "delivery_method_to_courier": "Delivery method to courier",
+  "courier_pick_up_address": "Courier pick up address",
+  "check_the_box_if_you_agree_with_the_conditions": "Check the box if you agree with the conditions:"
 }
-
-
