Сделал регистрацию, авторизацию, выход.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -25,7 +25,7 @@
   "country_code": "Country code",
 
   "confirmation": "Conformation",
-  "confirmation_text": "Please enter the code received on the number +7 905 677 34 54",
+  "confirmation_text": "Please enter the code received on the number",
   "connect": "Connect",
   "connect_card": "Connect card",
   "continue_button": "Continue",
